# agimus-demos-ur3-pointing

./: #CMakeLists.txt#  CMakeLists.txt  calibration.py  config.rviz  demo-kapla.yaml  demo.launch  load_ur3e.launch  rviz_rosbag.launch  simulation.launch  supervisor.py  ur3_fov.py  world_setup.launch
config/: my_robot_calibration.yaml
scripts/: init_ur3.py
scripts/utils/: model.py
src/agimus_demos/: tools_hpp.py
src/agimus_demos/calibration/: tooltip_calibration.py
src/rqt_agimus/: tooltip_calibration.py
srdf/: ur3_robot.srdf  ur5_robot.srdf~
ur3/: .gitmodules  CMakeLists.txt~  LICENSE
ur3/pointing/: #script_hpp.py#  .#script_hpp.py  CMakeLists.txt  README-calibration.md  README.md  README_how_to_rosbag.md  createConstraintGraph.py  demo-april-tag-plank.yaml  demo-kapla.yaml  demo-plaque-tubes-with-table.yaml  demo.launch  demo_ur3.py  demo_ur3.py~  init_ur3.py  load_ur.launch  script_hpp.py  simulation.launch  test_sot.py  ur3_upload.launch
ur3/pointing/config/: calibrated-params.yaml
ur3/pointing/data-simulation/: robot.urdf
ur3/pointing/measurements-2023-02-07/: robot.urdf
ur3/pointing/report/: report.md
ur3/pointing/scripts/: createConstraintGraph.py  demo_ur3.py  demo_ur3_custom.py  init_ur3.py  tools_hpp.py
ur3/pointing/scripts/utils/: euler_to_quaternion.py
ur3/pointing/srdf/: kapla.srdf
ur3/pointing/urdf/: pokeball.urdf  robot-init.urdf.xacro  robot.urdf.xacro
ur3/pointing/urdf/robotiq_gripper/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro
ur3/pointing/utils/: __init__.py  model.py  norm.py
urdf/: additional.urdf.xacro  d435_gazebo.urdf.xacro  kapla.urdf  robot.urdf.xacro  ur3_bin-picking.xacro  ur3_bin-picking_sim.urdf.xacro
